# varlink-http-bridge

./: .gitignore  Cargo.toml  README.md  justfile  varlink-httpd.spec
.github/workflows/: ci.yml
data/: varlink-http-bridge.service.in  varlink-httpd-vsock.service.in  varlink-httpd-vsock.socket  varlink-httpd.service.in  varlink-httpd.socket
mkosi/: mkosi.build.chroot  mkosi.conf  mkosi.prepare
src/: auth_ssh.rs  lib.rs  main.rs  tests.rs
