[package]
name = "varlink-http-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
varlink = { version = "13.0", features = ["tokio"] }
varlink_parser = "6.0.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["color", "humantime"] }
argh = "0.1"
# not using full regex as it adds more bloat and our requirements are minimal
regex-lite = "0.1"
listenfd = "1.0.2"
tungstenite = "0.28"
rustix = { version = "1.0", features = ["event"] }
signal-hook = "0.3"
# using opeenssl here to keep size small, rusttls adds ~1.8MB binary size
# and nativetls does not support mTLS
openssl = "0.10"
tokio-openssl = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
test-with = { version = "0.14", default-features = false, features = ["runtime"] }
scopeguard = "1.2"
gethostname = "1.1.0"
tempfile = "3.10"
tokio-tungstenite = "0.28"
futures-util = { version = "0.3" }
